# cs4220-project-1

./: CMakeLists.txt  HMAC.c  README.md  client.c  client.crt  client.key  hmac_sha256.c  makefile for server  server.c  server.crt  server.key
